<resources>
    <string name="app_name">YW8</string>
    <string name="authorization">Bearer PTu45EJAcujcs1i8PzOEikW7Wn5a8Q</string>

    <!-- Google Analytics -->

    <!-- MixPanel -->
    <string name="MIXPANEL_TOKEN">328b330c9e8e2732c24ea2154b17d0d2</string>

    <!-- Splash Screen -->
    <string name="app_heading">YW8</string>

    <!-- signIn/signUp -->
    <string name="connect_with">Sign up via</string>
    <string name="server_client_id">54832716150-fedbq3bfv99as0vkv2fp3q12juu3btp7.apps.googleusercontent.com</string>
    <string name="server_web_id">54832716150-9d6pd2m4ttlcllelrpifbthke4t5eckb.apps.googleusercontent.com</string>
    <string name="backend_facebook">facebook</string>
    <string name="grant_type_conv_token">convert_token</string>
    <string name="backend_google">google-oauth2</string>
    <string name="facebook_app_id">511959269002627</string>

    <!-- Menu Bar -->
    <string name="options">Options</string>
    <string name="get_points">Win Prizes</string>
    <string name="log_out">Log Out</string>

    <!-- Home Page -->
    <string name="check_waiting_time">Check waiting time at\nrestaurants, pubs &#38; bars</string>
    <string name="waiting_time_search">SEARCH</string>
    <string name="give_wait_time">Give current\nwaiting time</string>
    <string name="give_time_update">UPDATE</string>
    <string name="sp_lifetime_points">Lifetime Points</string>
    <string name="give_time_win_prizes">Give waiting time &amp; win prizes</string>

    <!-- Get Points -->
    <string name="get_points_heading">Win Prizes</string>
    <string name="get_points_back">Home</string>

    <!-- Search Activity -->
    <string name="suggestion_text">Restaurant, Pub, Bar</string>
    <string name="closed">Closed</string>
    <string name="search">Search</string>

    <!-- User Profile-->
    <string name="badge_type_rookie">ROOKIE</string>
    <string name="lifetime_points">Lifetime Points</string>
    <string name="profile">Profile</string>
    <string name="year_leaderboard">%d Leaderboard</string>

    <!-- Restaurant Profile & Update Profile-->
    <string name="current_waiting_time_text">Current waiting time is</string>
    <string name="mins">mins</string>
    <string name="update">Update</string>
    <string name="current_wait">Current waiting time\?</string>
    <string name="ambiance">Ambiance\?</string>
    <string name="similar_rest_text_wait">Similar place nearby with no waiting time</string>
    <string name="similar_rest_closed">Similar place that\'s open with no waiting time</string>
    <string name="similar_closed">There are no similar open restaurants nearby right now.</string>
    <string name="num_of_points_added">Thanks, you just earned %s points&#33;</string>
    <string name="too_often_update">You can\'t update the waiting time for the same place too often</string>

    <!-- Leader Board -->
    <string name="leaderboard">Leaderboard</string>
    <string name="monthly">Monthly</string>
    <string name="year">Yearly</string>

    <!-- Big Badge -->
    <string name="congrats">Congratulations &#33;</string>
    <string name="you_are_now_a">You are now a</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <!-- Badge Info -->
    <string name="general">GENERAL</string>
    <string name="gen_level">LEVEL 6</string>
    <string name="knight">KNIGHT</string>
    <string name="kni_level">LEVEL 5</string>
    <string name="captain">CAPTAIN</string>
    <string name="cap_level">LEVEL 4</string>
    <string name="agent">AGENT</string>
    <string name="age_level">LEVEL 3</string>
    <string name="soldier">SOLDIER</string>
    <string name="sol_level">LEVEL 2</string>
    <string name="rookie">ROOKIE</string>
    <string name="roo_level">LEVEL 1</string>
    <string name="badges_to_collect">Badges To Collect</string>
    <string name="month_leaderboard">%s Leaderboard</string>

</resources>
