<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray">

    <android.support.v7.widget.Toolbar
        android:id="@+id/home_page_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:background="@color/blueGreen"
        app:titleTextAppearance="@style/AppTheme.Toolbar.Title" />

    <!-- CardView for searching for restaurants -->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id= "@+id/cv_search_restaurants"
        android:layout_gravity ="center"
        android:layout_below= "@+id/home_page_toolbar"
        android:layout_marginTop="11.3dp"
        android:background="@color/white"
        android:layout_width = "330dp"
        android:layout_height= "190dp"
        android:paddingStart="14dp"
        android:paddingEnd="15dp"
        android:layout_marginStart="14dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/check_waiting_time"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:lineSpacingExtra="3dp"
                android:alpha="0.86"
                android:textColor="@color/black"
                android:textSize="@dimen/home_page_reading_text"
                android:gravity="center"
                android:text="@string/check_waiting_time"/>

            <Button
                android:id="@+id/waiting_time_search"
                android:layout_height="50dp"
                android:layout_width="270dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="31.3dp"
                android:background="@drawable/button_round_edges"
                android:layout_below= "@+id/check_waiting_time"
                android:textSize="@dimen/home_page_button_text"
                android:textColor="@color/white"
                android:drawableStart="@drawable/search_white"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:stateListAnimator="@null"
                android:text="@string/waiting_time_search"/>

        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <!-- CardView for giving the current wait time -->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id= "@+id/cv_give_wait_time"
        android:layout_gravity ="center"
        android:layout_below= "@+id/cv_search_restaurants"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:layout_width = "330dp"
        android:layout_height= "190dp"
        android:paddingStart="14dp"
        android:paddingEnd="15dp"
        android:layout_marginStart="14dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/give_wait_time"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:lineSpacingExtra="3dp"
                android:alpha="0.86"
                android:textColor="@color/black"
                android:textSize="@dimen/home_page_reading_text"
                android:layout_marginTop="30dp"
                android:text="@string/give_wait_time"/>

            <Button
                android:id="@+id/give_time_update"
                android:layout_height="50dp"
                android:layout_width="270dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="31.3dp"
                android:textSize="@dimen/home_page_button_text"
                android:background="@drawable/button_round_edges"
                android:layout_below= "@+id/give_wait_time"
                android:textColor="@color/white"
                android:drawableStart="@drawable/update_white"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:stateListAnimator="@null"
                android:text="@string/give_time_update"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <!-- CardView for showing user profile time -->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id= "@+id/cv_user_profile"
        android:layout_gravity ="center"
        android:layout_below= "@+id/cv_give_wait_time"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:layout_width = "330dp"
        android:layout_height= "124dp"
        android:paddingStart="14dp"
        android:paddingEnd="15dp"
        android:layout_marginStart="14dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id= "@+id/cv_user_badge_info"
                android:layout_gravity ="center"
                card_view:cardBackgroundColor="@color/rowGreen"
                android:background="@color/white"
                android:layout_width = "115dp"
                card_view:cardElevation="0dp"
                android:layout_height= "match_parent"
                card_view:cardCornerRadius="0dp">

                <RelativeLayout
                    android:id="@+id/cv_badge_info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true">

                    <ImageView
                        android:id="@+id/cv_badge_image"
                        android:layout_width="45dp"
                        android:layout_height="55dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/homescreen_profile_rookie_locked"/>

                    <TextView
                        android:id="@+id/cv_badge_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/badge_type_rookie"
                        android:textColor="@color/black"
                        android:layout_marginTop="8dp"
                        android:layout_centerHorizontal="true"
                        android:alpha="0.54"
                        android:layout_below="@+id/cv_badge_image"
                        android:textSize="@dimen/user_profile_points_text"/>

                </RelativeLayout>


                </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id= "@+id/cv_short_user_info"
                android:layout_gravity ="center"
                card_view:cardElevation="0dp"
                card_view:cardBackgroundColor="@color/white"
                android:background="@color/white"
                android:layout_width = "match_parent"
                android:layout_height= "match_parent"
                card_view:cardCornerRadius="0dp">

                <RelativeLayout
                    android:id="@+id/cv_short_user_details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true">

                    <TextView
                        android:id="@+id/cv_short_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="name"
                        android:textColor="@color/black"
                        android:layout_marginTop="12dp"
                        android:alpha="0.86"
                        android:layout_centerHorizontal="true"
                        android:textSize="@dimen/home_page_reading_text"/>

                    <TextView
                        android:id="@+id/cv_short_user_points"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="&#45; &#45; &#45;"
                        android:textColor="@color/blueGreen"
                        android:layout_below="@+id/cv_short_user_name"
                        android:layout_marginTop="2dp"
                        android:layout_centerHorizontal="true"
                        android:textSize="34sp"/>

                    <TextView
                        android:id="@+id/cv_short_user_points_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/give_time_win_prizes"
                        android:textColor="@color/black"
                        android:alpha="0.54"
                        android:layout_below="@+id/cv_short_user_points"
                        android:layout_marginTop="2dp"
                        android:layout_centerHorizontal="true"
                        android:textSize="@dimen/user_profile_points_text"/>

                </RelativeLayout>


            </android.support.v7.widget.CardView>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>